# PHAS100

phas100/: main.cpp
phas100.xcodeproj/: project.pbxproj
phas100.xcodeproj/xcuserdata/sushantnigudkar.xcuserdatad/xcschemes/: xcschememanagement.plist
phas100/week1_cmake_exercises/: README.md
phas100/week1_cmake_exercises/0_demo_minimal_cmake/: CMakeLists.txt  README.md
phas100/week1_cmake_exercises/0_demo_minimal_cmake/build_dir/: CMakeCache.txt  Makefile  cmake_install.cmake  hello_world
phas100/week1_cmake_exercises/1_hierarchical_cmake_helloworld/: CMakeLists.txt  README.md
phas100/week1_cmake_exercises/1_hierarchical_cmake_helloworld/build_dir/: CMakeCache.txt  Makefile  cmake_install.cmake
phas100/week1_cmake_exercises/1_hierarchical_cmake_helloworld/build_dir/src/: Makefile  cmake_install.cmake  hello_world
phas100/week1_cmake_exercises/1_hierarchical_cmake_helloworld/src/: CMakeLists.txt
phas100/week1_cmake_exercises/2_hierarchical_cmake_bindir_helloworld/: CMakeLists.txt  README.md
phas100/week1_cmake_exercises/2_hierarchical_cmake_bindir_helloworld/build_dir/: CMakeCache.txt  Makefile  cmake_install.cmake
phas100/week1_cmake_exercises/2_hierarchical_cmake_bindir_helloworld/build_dir/src/: Makefile  cmake_install.cmake
phas100/week1_cmake_exercises/2_hierarchical_cmake_bindir_helloworld/src/: hello.cpp
phas100/week1_cmake_exercises/3_cpp17_standards/: CMakeLists.txt
phas100/week1_cmake_exercises/3_cpp17_standards/build_dir/: CMakeCache.txt  Makefile  cmake_install.cmake
phas100/week1_cmake_exercises/3_cpp17_standards/build_dir/src/: Makefile  cmake_install.cmake
phas100/week1_cmake_exercises/3_cpp17_standards/src/: CMakeLists.txt  hello.cpp
phas100/week1_cmake_exercises/4_modified_src/: CMakeLists.txt
phas100/week1_cmake_exercises/4_modified_src/build_dir/: CMakeCache.txt  Makefile  cmake_install.cmake
phas100/week1_cmake_exercises/4_modified_src/build_dir/src/: Makefile  cmake_install.cmake
phas100/week1_cmake_exercises/4_modified_src/src/: CMakeLists.txt  hello.cpp
phas100/week1_cmake_exercises/5_modified_src_and_cmakelists/: CMakeLists.txt  README.md
phas100/week1_cmake_exercises/5_modified_src_and_cmakelists/build_dir/: CMakeCache.txt  Makefile  cmake_install.cmake
phas100/week1_cmake_exercises/5_modified_src_and_cmakelists/build_dir/src/: Makefile  cmake_install.cmake
phas100/week1_cmake_exercises/5_modified_src_and_cmakelists/src/: CMakeLists.txt  greet.cpp
phas100/week1_cmake_exercises/6_header_inclusion/: CMakeLists.txt  README.md
phas100/week1_cmake_exercises/6_header_inclusion/build_dir/: CMakeCache.txt  Makefile  cmake_install.cmake
phas100/week1_cmake_exercises/6_header_inclusion/build_dir/src/: Makefile  cmake_install.cmake
phas100/week1_cmake_exercises/6_header_inclusion/src/: CMakeLists.txt  hello.cpp
phas100/week1_cmake_exercises/6_header_inclusion/src/include/: common_header.h
phas100/week1_cmake_exercises/7_basic_lib/: CMakeLists.txt  README.md
phas100/week1_cmake_exercises/7_basic_lib/build_dir/: CMakeCache.txt  Makefile  cmake_install.cmake
phas100/week1_cmake_exercises/7_basic_lib/build_dir/src/: Makefile  cmake_install.cmake
phas100/week1_cmake_exercises/7_basic_lib/build_dir/src/greeting/: Makefile  cmake_install.cmake
phas100/week1_cmake_exercises/7_basic_lib/src/: CMakeLists.txt  hello.cpp
phas100/week1_cmake_exercises/7_basic_lib/src/greeting/: CMakeLists.txt  greeting.cpp
phas100/week1_cmake_exercises/7_basic_lib/src/greeting/include/: greeting.h
phas100/week2_cpp_exercises-main/Section_1_Vector_Functionality/: CMakeLists.txt
phas100/week2_cpp_exercises-main/Section_1_Vector_Functionality/include/: vector_functions.h
phas100/week2_cpp_exercises-main/Section_1_Vector_Functionality/src/: exercise_main.cpp  vector_functions.cpp
phas100/week2_cpp_exercises-main/Section_1_Vector_Functionality/test/src/: test_exercises.cpp
phas100/week2_cpp_exercises-main/Section_2_Monte_Carlo_Integrator/: CMakeLists.txt
phas100/week2_cpp_exercises-main/Section_2_Monte_Carlo_Integrator/src/: MonteCarlo.cpp
phas100/week2_cpp_exercises-main/Section_3_Smart_Pointers/src/: smart_pointers.cpp
phas100/week3_cpp_exercises/: README.md
phas100/week3_cpp_exercises/Animals/: CMakeLists.txt
phas100/week3_cpp_exercises/Animals/include/: animalClasses.h
phas100/week3_cpp_exercises/Animals/src/: animalClasses.cpp  animalsSpeak.cpp
phas100/week3_cpp_exercises/Fractions/: CMakeLists.txt
phas100/week3_cpp_exercises/Fractions/include/: Fraction.h
phas100/week3_cpp_exercises/Fractions/src/: CMakeLists.txt  Fraction.cpp  FractionAnalyser.cpp  FractionException.cpp
phas100/week3_cpp_exercises/Fractions/test/src/: CMakeLists.txt  test_fractions.cpp
phas100/week3_cpp_exercises/Students/: CMakeLists.txt
phas100/week3_cpp_exercises/Students/include/: Laptop.h  Student.h
phas100/week3_cpp_exercises/Students/src/: CMakeLists.txt  Laptop.cpp  StudentLaptopManagement.cpp
phas100/week3_cpp_exercises/exampleClass/include/: Sphere.h
phas100/week3_cpp_exercises/exampleClass/src/: Sphere.cpp
phas100/week4_cpp_exercises/: README.md
phas100/week4_cpp_exercises/DependencyInjection/: CMakeLists.txt
phas100/week4_cpp_exercises/DependencyInjection/include/: FunctionSampler.h
phas100/week4_cpp_exercises/DependencyInjection/source/: CMakeLists.txt  DependencyInjection.cpp  FunctionSampler.cpp
phas100/week4_cpp_exercises/RAII/: CMakeLists.txt
phas100/week4_cpp_exercises/RAII/source/: RAII.cpp
phas100/week4_cpp_exercises/Templates/: CMakeLists.txt
phas100/week4_cpp_exercises/Templates/source/: CMakeLists.txt
